# Census-Income-Project

./: .flake8  .gitignore  Aptfile  Dockerfile  README.md  live_api_request.py  main.py  model_card.md  pyproject.toml  train_model.py
.github/workflows/: ci.yml
data/data_cleaned/: census_cleaned.csv
docs/: census_income_project_sprint_guide.md
model/: cv_results.csv  encoder.pkl  slice_output.txt
notebooks/: eda.ipynb
src/census/: __init__.py  configure_logging.py  data.py  data_loader.py  evaluation.py  feature_engineering.py  inference.py  model.py  orchestrator.py  preprocessing.py  schemas.py  slicing.py  train_model.py
tests/: __init__.py  conftest.py  data_test.py  test_api.py  test_evaluation.py  test_inference.py  test_model.py  test_orchestrator.py  test_preprocessing.py  test_slicing.py  test_train_model.py
