[project]
name = "census-income-project"
version = "0.1.0"
description = "Train a Census Income classifier and deploy it with FastAPI."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Fabio Carvalho Lima", email = "lima.fisico@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "pydantic>=2.13.0",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[project.urls]
Repository = "https://github.com/FabioCLima/Census-Income-Project"
Issues = "https://github.com/FabioCLima/Census-Income-Project/issues"

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["census"]

[tool.pytest.ini_options]
addopts = "--color=yes --tb=short"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/census"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
